# Supertracer

./: .gitignore  CMakeLists.txt  SuperTracer.sln
GTest/: CMakeLists.txt  GTest.vcxproj  GTest.vcxproj.filters
Pixeltoaster/: CMakeLists.txt
SuperMath/: CMakeLists.txt  SuperMath.cpp  SuperMath.h  SuperMath.vcxproj  SuperMath.vcxproj.filters
SuperMathTest/: CMakeLists.txt  SuperMathTest.cpp  SuperMathTest.vcxproj  SuperMathTest.vcxproj.filters
SuperTracer/: CMakeLists.txt  ReadMe.txt  SuperTracer.cpp  SuperTracer.vcxproj  SuperTracer.vcxproj.filters  stdafx.cpp
SuperTracer/Pixeltoaster/Pixeltoaster/: Pixeltoaster.cpp  Pixeltoaster.vcxproj  Pixeltoaster.vcxproj.filters  ReadMe.txt  stdafx.cpp
SuperTracer/Pixeltoaster/Pixeltoaster/Debug/: Pixeltoaster.idb  vc140.idb
SuperTracer/Pixeltoaster/Pixeltoaster/Debug/Pixeltoaster.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Pixeltoaster.lastbuildstate  lib.command.1.tlog
SuperTracer/Pixeltoaster/Pixeltoaster/Release/Pixeltoaster.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Pixeltoaster.lastbuildstate  lib.command.1.tlog
